[feat] modificacion de ruta principal e implementación para compartir notas
