# src/routes/utilsRoutes.ts
@@ -1,10 +1,10 @@
 import { Router } from "express";
-import { checkGrammar, renderMarkdownToHtml } from "../controllers/utilsController";
+import { checkGrammar, renderMarkdownHtml } from "../controllers/utilsController";
 
 const router = Router();
 
 // /api/utils
-router.post("/checkGrammar", checkGrammar);
-router.post("/renderMarkdownToHtml", renderMarkdownToHtml);
+router.post("/check-grammar", checkGrammar);
+router.post("/render-markdown-html", renderMarkdownHtml);
 
 export default router;
